# whisper-transcriber

./: .env.example  .gitignore  README.md  docker-compose.yml  install-nvidia-toolkit.sh
.claude/: settings.local.json
backend/: Dockerfile.api  Dockerfile.worker  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  queue.py
backend/app/exporters/: docx_exp.py  json_exp.py  srt.py  txt.py  vtt.py
backend/app/routes/: export.py  jobs.py  stream.py  upload_webhook.py
backend/worker/: tasks.py
frontend/: Dockerfile  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  config.ts  sse.ts  utils.ts
frontend/src/lib/components/: Badge.svelte  Button.svelte  ExportMenu.svelte  JobCard.svelte  ProgressBar.svelte  SegmentList.svelte  Uploader.svelte
frontend/src/lib/i18n/: pt-BR.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/jobs/[id]/: +page.svelte
frontend/src/routes/upload/: +page.svelte
tusd/hooks/: post-finish
