[project]
name = "transcritor-backend"
version = "0.1.0"
description = "Backend FastAPI + worker ARQ para transcrição com faster-whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "faster-whisper>=1.1.0",
    "ctranslate2>=4.5.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*"]
